# hs-backtraces

./: LICENSE  README.md  cabal.project  hs-backtraces.cabal
app/: Main.hs
src/: Lib.hs
